Removed white space at the bottom of the home page and moved text content to sit on top of the bottom parallax. Added margin and padding to text in both parallax for responsiveness. Added fixed navbar for user convenience

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,7 +45,7 @@ nav .brand-logo {
 }
 
 .parallax-container {
-    height: 500px;
+    height: 800px;
 }
 
 .hero-text {
@@ -56,6 +56,7 @@ nav .brand-logo {
     font-weight: 400;
     margin-left: 5px;
     margin-right: 5px;
+    padding-top: 5%;
 }
 
 .hero-text-1 {
@@ -65,7 +66,7 @@ nav .brand-logo {
     color: #20b2aa;
     font-weight: 300;
     margin-bottom: 1%; 
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 .hero-text-2 {
@@ -136,5 +137,5 @@ nav .brand-logo {
 
 .text-padding {
     padding-bottom: 5%;
-    padding-top: 5%;
+    padding-top: 30%;
 }
